@@ -1,22 +1,22 @@
 package com.linkedin.metadata.resources.operations;
 
-import static com.linkedin.metadata.Constants.*;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorized;
+import static com.datahub.authorization.AuthUtil.isAPIOperationsAuthorized;
 import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
+import static com.linkedin.metadata.utils.CriterionUtils.buildCriterion;
 
 import com.codahale.metrics.MetricRegistry;
 import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
 import com.datahub.plugins.auth.authorization.Authorizer;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
 import com.linkedin.metadata.aspect.VersionedAspect;
 import com.linkedin.metadata.authorization.PoliciesConfig;
 import com.linkedin.metadata.entity.EntityService;
 import com.linkedin.metadata.query.filter.Condition;
 import com.linkedin.metadata.query.filter.Criterion;
 import com.linkedin.metadata.query.filter.Filter;
-import com.linkedin.metadata.restli.RestliUtil;
+import com.linkedin.metadata.resources.restli.RestliUtils;
 import com.linkedin.metadata.search.utils.QueryUtils;
 import com.linkedin.metadata.systemmetadata.SystemMetadataService;
 import com.linkedin.metadata.timeseries.BatchWriteOperationsOptions;
@@ -31,7 +31,9 @@ import com.linkedin.restli.server.annotations.RestLiCollection;
 import com.linkedin.restli.server.resources.CollectionResourceTaskTemplate;
 import com.linkedin.timeseries.TimeseriesIndexSizeResultArray;
 import com.linkedin.timeseries.TimeseriesIndicesSizesResult;
-import io.opentelemetry.extension.annotations.WithSpan;
+import io.datahubproject.metadata.context.OperationContext;
+import io.datahubproject.metadata.context.RequestContext;
+import io.opentelemetry.instrumentation.annotations.WithSpan;
 import java.util.ArrayList;
 import java.util.List;
 import javax.annotation.Nonnull;
@@ -77,11 +79,17 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   @Named("authorizerChain")
   private Authorizer _authorizer;
 
+    @Inject
+    @Named("systemOperationContext")
+    private OperationContext systemOperationContext;
+
   public OperationsResource() {}
 
   @VisibleForTesting
-  OperationsResource(TimeseriesAspectService timeseriesAspectService) {
+  OperationsResource(OperationContext systemOperationContext, TimeseriesAspectService timeseriesAspectService) {
     this._timeseriesAspectService = timeseriesAspectService;
+    this.systemOperationContext = systemOperationContext;
+    this._authorizer = systemOperationContext.getAuthorizationContext().getAuthorizer();
   }
 
   @Action(name = ACTION_RESTORE_INDICES)
@@ -92,12 +100,13 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @ActionParam(PARAM_URN) @Optional @Nullable String urn,
       @ActionParam(PARAM_URN_LIKE) @Optional @Nullable String urnLike,
       @ActionParam("start") @Optional @Nullable Integer start,
-      @ActionParam("batchSize") @Optional @Nullable Integer batchSize) {
-    return RestliUtil.toTask(
-        () -> {
-          return Utils.restoreIndices(
-              aspectName, urn, urnLike, start, batchSize, _authorizer, _entityService);
-        },
+      @ActionParam("batchSize") @Optional @Nullable Integer batchSize,
+      @ActionParam("limit") @Optional @Nullable Integer limit,
+      @ActionParam("gePitEpochMs") @Optional @Nullable Long gePitEpochMs,
+      @ActionParam("lePitEpochMs") @Optional @Nullable Long lePitEpochMs) {
+    return RestliUtils.toTask(systemOperationContext,
+      () ->  Utils.restoreIndices(systemOperationContext, getContext(),
+                  aspectName, urn, urnLike, start, batchSize, limit, gePitEpochMs, lePitEpochMs, _authorizer, _entityService),
         MetricRegistry.name(this.getClass(), "restoreIndices"));
   }
 
@@ -120,17 +129,19 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @ActionParam(PARAM_NODE_ID) @Optional String nodeId,
       @ActionParam(PARAM_TASK_ID) @Optional("0") long taskId,
       @ActionParam(PARAM_TASK) @Optional String task) {
-    return RestliUtil.toTask(
+    return RestliUtils.toTask(systemOperationContext,
         () -> {
-          Authentication authentication = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
-                  authentication,
-                  _authorizer,
-                  ImmutableList.of(PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE),
-                  List.of(java.util.Optional.empty()))) {
+
+          final Authentication auth = AuthenticationContext.getAuthentication();
+          final OperationContext opContext = OperationContext.asSession(
+                  systemOperationContext, RequestContext.builder().buildRestli(auth.getActor().toUrnStr(), getContext(),
+                          ACTION_GET_ES_TASK_STATUS), _authorizer, auth, true);
+
+          if (!isAPIOperationsAuthorized(
+                  opContext,
+                  PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE)) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get ES task status");
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get ES task status");
           }
           boolean taskSpecified = task != null;
           boolean nodeAndTaskIdSpecified = nodeId != null && taskId > 0;
@@ -181,21 +192,24 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   @Nonnull
   @WithSpan
   public Task<TimeseriesIndicesSizesResult> getIndexSizes() {
-    return RestliUtil.toTask(
+    return RestliUtils.toTask(systemOperationContext,
         () -> {
-          Authentication authentication = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
-                  authentication,
-                  _authorizer,
-                  ImmutableList.of(PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE),
-                  List.of(java.util.Optional.empty()))) {
+
+            final Authentication auth = AuthenticationContext.getAuthentication();
+          final OperationContext opContext = OperationContext.asSession(
+                  systemOperationContext, RequestContext.builder().buildRestli(auth.getActor().toUrnStr(), getContext(),
+                          ACTION_GET_INDEX_SIZES, List.of()), _authorizer, auth, true);
+
+          if (!isAPIOperationsAuthorized(
+                  opContext,
+                  PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE)) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get index sizes.");
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get index sizes.");
           }
-          TimeseriesIndicesSizesResult result = new TimeseriesIndicesSizesResult();
+
+            TimeseriesIndicesSizesResult result = new TimeseriesIndicesSizesResult();
           result.setIndexSizes(
-              new TimeseriesIndexSizeResultArray(_timeseriesAspectService.getIndexSizes()));
+              new TimeseriesIndexSizeResultArray(_timeseriesAspectService.getIndexSizes(opContext)));
           return result;
         },
         MetricRegistry.name(this.getClass(), "getIndexSizes"));
@@ -211,15 +225,17 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @Nullable Long timeoutSeconds,
       @Nullable Boolean forceDeleteByQuery,
       @Nullable Boolean forceReindex) {
-    Authentication authentication = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.TRUNCATE_TIMESERIES_INDEX_PRIVILEGE),
-            List.of(java.util.Optional.empty()))) {
+
+      final Authentication auth = AuthenticationContext.getAuthentication();
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(auth.getActor().toUrnStr(), getContext(),
+                    "executeTruncateTimeseriesAspect", entityType), _authorizer, auth, true);
+
+    if (!isAPIAuthorized(
+            opContext,
+            PoliciesConfig.TRUNCATE_TIMESERIES_INDEX_PRIVILEGE)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to truncate timeseries index");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to truncate timeseries index");
     }
 
     if (forceDeleteByQuery != null && forceDeleteByQuery.equals(forceReindex)) {
@@ -228,12 +244,12 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
 
     List<Criterion> criteria = new ArrayList<>();
     criteria.add(
-        QueryUtils.newCriterion(
-            "timestampMillis", String.valueOf(endTimeMillis), Condition.LESS_THAN_OR_EQUAL_TO));
+        buildCriterion(
+            "timestampMillis", Condition.LESS_THAN_OR_EQUAL_TO, String.valueOf(endTimeMillis)));
 
     final Filter filter = QueryUtils.getFilterFromCriteria(criteria);
-    long numToDelete = _timeseriesAspectService.countByFilter(entityType, aspectName, filter);
-    long totalNum = _timeseriesAspectService.countByFilter(entityType, aspectName, new Filter());
+    long numToDelete = _timeseriesAspectService.countByFilter(opContext, entityType, aspectName, filter);
+    long totalNum = _timeseriesAspectService.countByFilter(opContext, entityType, aspectName, new Filter());
 
     String deleteSummary =
         String.format(
@@ -271,18 +287,18 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
         // count
         List<Criterion> reindexCriteria = new ArrayList<>();
         reindexCriteria.add(
-            QueryUtils.newCriterion(
-                "timestampMillis", String.valueOf(endTimeMillis), Condition.GREATER_THAN));
+            buildCriterion(
+                "timestampMillis", Condition.GREATER_THAN, String.valueOf(endTimeMillis)));
 
         final Filter reindexFilter = QueryUtils.getFilterFromCriteria(reindexCriteria);
         String taskId =
-            _timeseriesAspectService.reindexAsync(entityType, aspectName, reindexFilter, options);
+            _timeseriesAspectService.reindexAsync(opContext, entityType, aspectName, reindexFilter, options);
         log.info("reindex request submitted with ID " + taskId);
         return taskId;
       } else {
         String taskId =
-            _timeseriesAspectService.deleteAspectValuesAsync(
-                entityType, aspectName, filter, options);
+            _timeseriesAspectService.deleteAspectValuesAsync(opContext,
+                    entityType, aspectName, filter, options);
         log.info("delete by query request submitted with ID " + taskId);
         return taskId;
       }
@@ -301,7 +317,7 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @ActionParam(PARAM_TIMEOUT_SECONDS) @Optional @Nullable Long timeoutSeconds,
       @ActionParam(PARAM_FORCE_DELETE_BY_QUERY) @Optional @Nullable Boolean forceDeleteByQuery,
       @ActionParam(PARAM_FORCE_REINDEX) @Optional @Nullable Boolean forceReindex) {
-    return RestliUtil.toTask(
+    return RestliUtils.toTask(systemOperationContext,
         () ->
             executeTruncateTimeseriesAspect(
                 entityType,
